# realsense_capture_app

./: .gitignore  .gitmodules  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
config/: config.json
data/calibrations/: 043422252387_1280x720.json  046122250168_1280x720.json  105322251225_1280x720.json  105322251564_1280x720.json  108222250342_1280x720.json  117222250549_1280x720.json  239222302862_1280x720.json
notebooks/: RealsenseDeviceHelper.ipynb
rs_capture_toolkit/: RealSenseCaptureToolkit.py  RealsenseDeviceManager.py  Utils.py  __init__.py
static/: scripts.js  styles.css
templates/: index.html
